Update azure-pipelines.yml for Azure Pipelines

--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -29,6 +29,7 @@ steps:
     arguments: '--configuration $(buildConfiguration)'
 
 - task: DotNetCoreCLI@2
+  displayName: Publish
   inputs:
     command: 'pack'
     packagesToPack: 'src/**/*.csproj'
@@ -39,3 +40,10 @@ steps:
     majorVersion: '0'
     minorVersion: '0'
     patchVersion: '1'
+
+- task: PublishBuildArtifacts@1
+  displayName: publish artifacts
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'packages'
+    publishLocation: 'Container'
