--- a/src/Microsoft.Extensions.Configuration.ZooKeeper/Microsoft.Extensions.Configuration.ZooKeeper.csproj
+++ b/src/Microsoft.Extensions.Configuration.ZooKeeper/Microsoft.Extensions.Configuration.ZooKeeper.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageId>MEConfig.ZooKeeper</PackageId>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
