--- a/src/Microsoft.Extensions.Configuration.ZooKeeper/Microsoft.Extensions.Configuration.ZooKeeper.csproj
+++ b/src/Microsoft.Extensions.Configuration.ZooKeeper/Microsoft.Extensions.Configuration.ZooKeeper.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
     <PackageReference Include="ZooKeeperNetEx" Version="3.4.12.1" />
   </ItemGroup>
 
