--- a/test/Tester/Tester.csproj
+++ b/test/Tester/Tester.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\Microsoft.Extensions.Configuration.ZooKeeper\Microsoft.Extensions.Configuration.ZooKeeper.csproj" />
   </ItemGroup>
 
