--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -33,13 +33,11 @@ steps:
   inputs:
     command: 'pack'
     packagesToPack: 'src/**/*.csproj'
+    arguments: '--version-suffix $(Build.BuildNumber)'
     nobuild: true
     includesymbols: true
     includesource: true
-    versioningScheme: 'byPrereleaseNumber'
-    majorVersion: '0'
-    minorVersion: '0'
-    patchVersion: '1'
+    versioningScheme: 'off'
 
 - task: PublishBuildArtifacts@1
   displayName: publish artifacts
