--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -29,11 +29,11 @@ steps:
     arguments: '--configuration $(buildConfiguration)'
 
 - task: DotNetCoreCLI@2
-  displayName: Publish
+  displayName: Pack
   inputs:
     command: 'pack'
     packagesToPack: 'src/**/*.csproj'
-    arguments: '--version-suffix $(Build.BuildNumber)'
+    buildProperties: '--version-suffix $(Build.BuildNumber)'
     nobuild: true
     includesymbols: true
     includesource: true
