Update azure-pipelines.yml for Azure Pipelines

--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -33,7 +33,7 @@ steps:
   inputs:
     command: 'pack'
     packagesToPack: 'src/**/*.csproj'
-    buildProperties: '/p:VersionSuffix=$(Build.BuildNumber)'
+    buildProperties: 'VersionSuffix=$(Build.BuildNumber)'
     nobuild: true
     includesymbols: true
     includesource: true
